# GNSS-Metadata-Standard

./: .gitignore  CMakeLists.txt  README.md
API/: CMakeLists.txt
API/ide/make/: Makefile
API/ide/visual_studio/: API.sln
API/ide/visual_studio/GnssMetadata/: GnssMetadata.vcxproj  GnssMetadata.vcxproj.filters  ReadMe.txt
API/ide/visual_studio/GnssMetadata/Debug/: vc120.idb
API/ide/visual_studio/GnssMetadata/Debug/GnssMetadata.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
API/ide/visual_studio/GnssMetadata/Release/GnssMetadata.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
API/ide/visual_studio/TestApp/: 141230-gps-4msps.xml  TestApp.vcxproj
API/ide/visual_studio/TestApp/Debug/: vc120.idb
API/ide/visual_studio/TestApp/Debug/TestApp.tlog/: CL.read.1.tlog  CL.write.1.tlog  TestApp.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
API/ide/visual_studio/TestApp/Release/TestApp.tlog/: CL.read.1.tlog  CL.write.1.tlog  TestApp.lastbuildstate  TestApp.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
API/ide/visual_studio/TinyXml2/: TinyXml2.vcxproj  TinyXml2.vcxproj.filters
API/ide/visual_studio/TinyXml2/Debug/: vc120.idb
API/ide/visual_studio/TinyXml2/Debug/TinyXml2.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
API/ide/visual_studio/TinyXml2/Release/TinyXml2.tlog/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  TinyXml2.lastbuildstate  cl.command.1.tlog  lib.command.1.tlog
API/ide/xcode/API.xcworkspace/: contents.xcworkspacedata
API/ide/xcode/API.xcworkspace/xcuserdata/james.xcuserdatad/: UserInterfaceState.xcuserstate
API/ide/xcode/DerivedData/API/: info.plist
API/ide/xcode/DerivedData/ModuleCache/: Session.modulevalidation
API/ide/xcode/GnssMetadata/GnssMetadata.xcodeproj/: project.pbxproj
API/ide/xcode/TestApp/TestApp.xcodeproj/: project.pbxproj
API/install/: 141230-gps-4msps.xml
API/source/: CMakeLists.txt
API/source/app/: CMakeLists.txt  TestApp.cpp
API/source/inc/GnssMetadata/: Date.h
API/source/lib/GnssMetadata/: CMakeLists.txt  Date.cpp  Duration.cpp  Frequency.cpp  Position.cpp
API/source/lib/GnssMetadata/Xml/: CMakeLists.txt  FileTranslator.cpp  StreamTranslator.cpp  Translator.cpp  XmlProcessor.cpp
API/source/lib/tinyxml2/: CMakeLists.txt  tinyxml2.cpp
Converter/: CMakeLists.txt
Converter/ide/make/: Makefile
Converter/ide/visual_studio/: Converter.sln
Converter/ide/visual_studio/Converter/: Converter.vcxproj  Converter.vcxproj.filters  ReadMe.txt
Converter/ide/visual_studio/Converter/Debug/: vc120.idb
Converter/ide/visual_studio/Converter/Debug/Converter.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
Converter/ide/visual_studio/Converter/Release/Converter.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
Converter/ide/visual_studio/Debug/: Converter.lib  TinyXml2.lib
Converter/ide/visual_studio/Release/: Converter.lib  TinyXml2.lib
Converter/ide/visual_studio/TestApp/: TestApp.vcxproj  TestApp.vcxproj.filters
Converter/ide/visual_studio/TestApp/Debug/: vc120.idb
Converter/ide/visual_studio/TestApp/Debug/TestApp.tlog/: CL.read.1.tlog  CL.write.1.tlog  TestApp.lastbuildstate  TestApp.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Converter/ide/visual_studio/TestApp/Release/TestApp.tlog/: cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Converter/ide/xcode/Converter.xcworkspace/: contents.xcworkspacedata
Converter/ide/xcode/Converter/Converter.xcodeproj/: project.pbxproj
Converter/ide/xcode/DerivedData/Converter/: info.plist
Converter/ide/xcode/DerivedData/ModuleCache/: Session.modulevalidation
Converter/ide/xcode/TestApp/TestApp.xcodeproj/: project.pbxproj
Converter/install/: L1.int8  TestApp  test.xml
Converter/install/FHG/: L125_III1b_15s.usbx
Converter/install/IFEN/: RoofTop.setx  compareSamples.m
Converter/install/JRC/: 150408_125245_UTC.xml  compare.m
Converter/source/: CMakeLists.txt
Converter/source/app/: CMakeLists.txt  TestApp.cpp
Converter/source/inc/: BlockInterpreter.h  ChunkInterpreter.h  ChunkInterpreter.hpp  EncoderFunctions.h  EndianFunctions.h  FormatFunctions.h  LaneInterpreter.h  SampleConverter.h  SampleConverter.hpp  SampleFileSink.h  SampleInterpreter.h  SampleInterpreterFactory.h  SampleInterpreterFactory.hpp  SampleSink.h  SinkedSampleInterpreter.h  SinkedSampleInterpreter.hpp
Converter/source/lib/: BlockInterpreter.cpp  CMakeLists.txt  EndianFunctions.cpp  LaneInterpreter.cpp  SampleConverter.cpp
Decoder/ide/visual_studio/: Decoder.sln
Decoder/ide/visual_studio/Debug/: TinyXml2.lib
Decoder/ide/visual_studio/Decoder/: Decoder.vcxproj  Decoder.vcxproj.filters
Decoder/ide/visual_studio/Release/: TinyXml2.lib
Decoder/ide/visual_studio/TestApp/: TestApp.vcxproj  TestApp.vcxproj.filters
Decoder/ide/visual_studio/TestApp/Debug/: vc120.idb
Decoder/source/app/: Test.cpp
Decoder/source/inc/: DecStream.h  Decoder.h  FileReader.h
Decoder/source/lib/: Decoder.cpp  FileReader.cpp
Specifications/documentation/: DraftMetadataStd_WorkingVersion.docx
install/: check_converter.m
install/CODC/: CheckData.m
python/: CMakeLists.txt  setup.py
python/sdrx/: CMakeLists.txt  __init__.py
python/sdrx/bindings/: any_uri.cc  band.cc  block.cc  chunk.cc  date.cc  duration.cc  file.cc  frequency.cc  front_end.cc  lane.cc  lump.cc  metadata.cc  position.cc  sample_source.cc  sample_source.hpp  sample_stream_info.cc  sdrx.cc  session.cc  stream.cc  system.cc  utils.h
source/api/lib/GnssMetadata/: CMakeLists.txt
source/app/: TestConverter.cpp
source/converter/lib/: CMakeLists.txt
(+125 files in other folders)
